Address card is fixed

--- a/www.megamachinery.com/about-us/index.html
+++ b/www.megamachinery.com/about-us/index.html
@@ -4847,7 +4847,7 @@
                                                                         style='color: #fff'></i></span>
                                                                 <div class="content-wrap"><span class='item-title'
                                                                         style='color:#a3baca;'>LOCATION</span>
-                                                                    <div class='text font1' style='color:#fff'>
+                                                                    <div style='color:#fff'>
                                                                         Zhejiang province:
                                                                         Address: 88 Yingxia North Road, Yuyao Industrial
                                                                         Park Zone, Yuyao,zhejiang province, China</div>
@@ -4875,7 +4875,7 @@
                                                                         style='color: #fff'></i></span>
                                                                 <div class="content-wrap"><span class='item-title'
                                                                         style='color:#a3baca;'>LOCATION</span>
-                                                                    <div class='text font1' style='color:#fff'>
+                                                                    <div style='color:#fff'>
                                                                         Guangdong:
                                                                         No. 8 Guangchang Road, Mingzhu Industrial Park,
                                                                         Conghua Economic Development Zone, Guangzhou
