font is bold for address

--- a/www.megamachinery.com/about-us/index.html
+++ b/www.megamachinery.com/about-us/index.html
@@ -4833,7 +4833,7 @@
                                                                         style='color: #fff'></i></span>
                                                                 <div class="content-wrap"><span class='item-title'
                                                                         style='color:#a3baca;'>LOCATION</span>
-                                                                    <div class='text font1' style='color:#fff'>
+                                                                    <div class='font1' style='color:#fff'>
                                                                         Yiwu intentional city
                                                                         Sales office 2 : 10floor , Shuguang Building,
                                                                         Yiwu City, Zhejiang Province.</div>
@@ -4861,7 +4861,8 @@
                                                                         style='color: #fff'></i></span>
                                                                 <div class="content-wrap"><span class='item-title'
                                                                         style='color:#a3baca;'>LOCATION</span>
-                                                                    <div class='text font1' style='color:#fff'>
+                                                                    <div class='text font1'
+                                                                        style='font-size:18px; color:#fff'>
                                                                         Shanghai:
                                                                         Address: No. 188 Xinjinqiao Road, Xuhui
                                                                         District, Shanghai </div>
