Two Icons is added whatsapp and Wechat

--- a/www.megamachinery.com/index.html
+++ b/www.megamachinery.com/index.html
@@ -4403,10 +4403,16 @@
 												style="color: #5acbe8;"></i><span class="important"
 												style="color:  !important;"></span></a></li>
 									<li class='contact-info-item'><a class='contact-info-icon-link'
-											href='https://www.linkedin.com/in/simon-cai-6a27a616b/'><i
-												class="fa fab fa-linkedin" style="color: #1e73be;"></i><span
+											href='https://www.linkedin.com/in/'><i class="fa fab fa-linkedin"
+												style="color: #1e73be;"></i><span class="important"
+												style="color:  !important;"></span></a></li>
+									<li class='contact-info-item'><a class='contact-info-icon-link'
+											href='https://www.linkedin.com/in/'><i class="fa fab fa-wechat"
+												style="color: #1e73be;"></i><span class="important"
+												style="color:  !important;"></span></a></li>
+									<li class='contact-info-item'><a class='contact-info-icon-link' href=''><i
+												class="fa fab fa-whatsapp" style="color: #1e73be;"></i><span
 												class="important" style="color:  !important;"></span></a></li>
-
 								</ul>
 							</div>
 						</div>
