Update heading from "MEGA" to "WASHUN" in index.html

--- a/www.megamachinery.com/index.html
+++ b/www.megamachinery.com/index.html
@@ -4826,7 +4826,7 @@
 													<div class="wpb_column vc_column_container vc_col-sm-3">
 														<div class="vc_column-inner">
 															<div class="wpb_wrapper">
-																<h1 class='heading-left  divider-modern'><span>MEGA
+																<h1 class='heading-left  divider-modern'><span>WASHUN
 																		Products</span></h1>
 															</div>
 														</div>
