Update text reference from "MEGA" to "WASHUN" in index.html

--- a/www.megamachinery.com/index.html
+++ b/www.megamachinery.com/index.html
@@ -4935,7 +4935,7 @@
 																<div class="wpb_text_column wpb_content_element">
 																	<div class="wpb_wrapper">
 																		<h6 style="text-align: left;"><span
-																				style="color: #000000;">MEGA  provides
+																				style="color: #000000;">WASHUN  provides
 																				the packaging containers with volumes
 																				ranging from a few milliliters to 300
 																				liters, large containers with capacities
