Update branding from MEGA to WASHUN across multiple HTML files and JSON data
- Changed all instances of "MEGA" to "WASHUN" in various product and solution pages to reflect the new branding.
- Updated RSS feed links and titles to use "WASHUN" instead of "MEGA".
- Removed outdated comment regarding HTTrack from the main index file.
- Modified JSON data for the solution page to include the updated branding.

--- a/www.megamachinery.com/products/pet-moulds/index.html
+++ b/www.megamachinery.com/products/pet-moulds/index.html
@@ -24,8 +24,8 @@
     </style>
     <link rel='dns-prefetch' href='http://fonts.googleapis.com/' />
     <link rel='dns-prefetch' href='http://use.fontawesome.com/' />
-    <link rel="alternate" type="application/rss+xml" title="MEGA &raquo; Feed" href="../../feed/index.html" />
-    <link rel="alternate" type="application/rss+xml" title="MEGA &raquo; Comments Feed"
+    <link rel="alternate" type="application/rss+xml" title="WASHUN&raquo; Feed" href="../../feed/index.html" />
+    <link rel="alternate" type="application/rss+xml" title="WASHUN&raquo; Comments Feed"
         href="../../comments/feed/index.html" />
     <script type="text/javascript">
         /* <![CDATA[ */
@@ -4574,7 +4574,7 @@
                                                 </h4>
                                                 <div class="wpb_text_column wpb_content_element">
                                                     <div class="wpb_wrapper">
-                                                        <p>Mega is the professional Chinese PET preform mould
+                                                        <p>WASHUNis the professional Chinese PET preform mould
                                                             manufacturer, supplier and maker. Our PET mould department
                                                             offers the dedicated team for all kinds of preform designs
                                                             and manufacturing different type of preform moulds, such as
@@ -4597,7 +4597,7 @@
                                                             standard neck finishes, such as PCO 1881, PCO1810, and
                                                             30/25. The cam roller design for the thread splits helps
                                                             operator maintenance freely.</p>
-                                                        <p>MEGA provides the preform mould refurbishment and preform
+                                                        <p>WASHUN provides the preform mould refurbishment and preform
                                                             weight, neck finish conversion service for other brand.</p>
 
                                                     </div>
@@ -4720,7 +4720,7 @@
                                                 </h5>
                                                 <div class="wpb_text_column wpb_content_element">
                                                     <div class="wpb_wrapper">
-                                                        <p>Mega is the professional closure moulds supplier,
+                                                        <p>WASHUNis the professional closure moulds supplier,
                                                             manufacturer, and maker. Our closure mould department offers
                                                             the dedicated team for all kinds of closure designs and… <a
                                                                 href="cap-and-closure-mould/index.html">[More]</a></p>
@@ -4750,7 +4750,8 @@
                                                 <h5 class='heading-left  divider-sm'><span>PET Blow Moulds</span></h5>
                                                 <div class="wpb_text_column wpb_content_element">
                                                     <div class="wpb_wrapper">
-                                                        <p>Mega supplies varieties of PET blow moulds, which has covered
+                                                        <p>WASHUNsupplies varieties of PET blow moulds, which has
+                                                            covered
                                                             the whole fields of mineral water, soft drink, and juice as
                                                             well as in other food and non-food utilization. <a
                                                                 href="../../portfolio/pet-blow-mould/index.html">[More]</a>
