--- a/www.megamachinery.com/solution/extrusion-blow-molded-containers-with-view-strip/index.html
+++ b/www.megamachinery.com/solution/extrusion-blow-molded-containers-with-view-strip/index.html
@@ -24,8 +24,8 @@
     </style>
     <link rel='dns-prefetch' href='http://fonts.googleapis.com/' />
     <link rel='dns-prefetch' href='http://use.fontawesome.com/' />
-    <link rel="alternate" type="application/rss+xml" title="MEGA &raquo; Feed" href="../../feed/index.html" />
-    <link rel="alternate" type="application/rss+xml" title="MEGA &raquo; Comments Feed"
+    <link rel="alternate" type="application/rss+xml" title="WASHUN &raquo; Feed" href="../../feed/index.html" />
+    <link rel="alternate" type="application/rss+xml" title="WASHUN &raquo; Comments Feed"
         href="../../comments/feed/index.html" />
     <script type="text/javascript">
         /* <![CDATA[ */
@@ -4549,7 +4549,7 @@
                                                         Brief Introduction</span></h4>
                                                 <div class="wpb_text_column wpb_content_element">
                                                     <div class="wpb_wrapper">
-                                                        <p>Mega provide the extrusion blow molding machine which
+                                                        <p>WASHUN provide the extrusion blow molding machine which
                                                             combined with an additional screw unit for the view strip.
                                                             the special designed extrusion head mixes two different
                                                             color materials into one parison, after the blowing, the
