--- a/www.megamachinery.com/solution/index.html
+++ b/www.megamachinery.com/solution/index.html
@@ -23,8 +23,8 @@
     </style>
     <link rel='dns-prefetch' href='http://fonts.googleapis.com/' />
     <link rel='dns-prefetch' href='http://use.fontawesome.com/' />
-    <link rel="alternate" type="application/rss+xml" title="MEGA &raquo; Feed" href="../feed/index.html" />
-    <link rel="alternate" type="application/rss+xml" title="MEGA &raquo; Comments Feed"
+    <link rel="alternate" type="application/rss+xml" title="WASHUN &raquo; Feed" href="../feed/index.html" />
+    <link rel="alternate" type="application/rss+xml" title="WASHUN &raquo; Comments Feed"
         href="../comments/feed/index.html" />
     <script type="text/javascript">
         /* <![CDATA[ */
@@ -4506,7 +4506,7 @@
                                                     excellent plastic packing solution.</h2>
                                                 <div class="wpb_text_column wpb_content_element">
                                                     <div class="wpb_wrapper">
-                                                        <p>MEGA focuses on industry development, so that customers can
+                                                        <p>WASHUN focuses on industry development, so that customers can
                                                             not only gain product benefits when working with experts,
                                                             but also gain advantages in the market. Our goal is to
                                                             establish long-term partnerships and close cooperation with
@@ -4583,7 +4583,7 @@
                                                 <div class="wpb_text_column wpb_content_element">
                                                     <div class="wpb_wrapper">
                                                         <h6 style="text-align: center;"><span
-                                                                style="color: #000000;">Mega’s preferential heating
+                                                                style="color: #000000;">Washun’s preferential heating
                                                                 system specialized in variety of thin oval &amp; flat
                                                                 shape PET bottles. We provide the turn-key package for
                                                                 the customer’s challenging container… <a
@@ -4675,7 +4675,7 @@
                                                 <div class="wpb_text_column wpb_content_element">
                                                     <div class="wpb_wrapper">
                                                         <h6 style="text-align: center;"><span
-                                                                style="color: #000000;">Mega offers the competitive
+                                                                style="color: #000000;">WASHUN offers the competitive
                                                                 large PET container production solutions. PET is free of
                                                                 BPA which means PET is the most safety packaging plastic
                                                                 materials. <a
@@ -4775,7 +4775,7 @@
 
                                                 <div class="wpb_text_column wpb_content_element">
                                                     <div class="wpb_wrapper">
-                                                        <h6 style="text-align: center;">MEGA focuses on industrial
+                                                        <h6 style="text-align: center;">WASHUN focuses on industrial
                                                             development, allowing customers to not only gain product
                                                             benefits when working with experts, but also gain advantages
                                                             in the market. Our goal is to establish long-term
@@ -4851,7 +4851,7 @@
                                                 <div class="wpb_text_column wpb_content_element">
                                                     <div class="wpb_wrapper">
                                                         <h6 style="text-align: center;"><span
-                                                                style="color: #000000;">Mega provide the extrusion blow
+                                                                style="color: #000000;">WASHUN provide the extrusion blow
                                                                 molding machine which combined with an additional screw
                                                                 unit for the view strip. <a
                                                                     href="extrusion-blow-molded-containers-with-view-strip/index.html">[More]</a></span>
@@ -4887,7 +4887,7 @@
                                                 <div class="wpb_text_column wpb_content_element">
                                                     <div class="wpb_wrapper">
                                                         <h6 style="text-align: center;"><span
-                                                                style="color: #000000;">Mega offer the solution in
+                                                                style="color: #000000;">WASHUNoffer the solution in
                                                                 process two or more different plastics are
                                                                 combined. These plastics show properties when combined
                                                                 which they do not have when processed on their own. <a
