--- a/www.megamachinery.com/solution/large-pet-container-5-gallon-pet-bottles/index.html
+++ b/www.megamachinery.com/solution/large-pet-container-5-gallon-pet-bottles/index.html
@@ -24,8 +24,8 @@
     </style>
     <link rel='dns-prefetch' href='http://fonts.googleapis.com/' />
     <link rel='dns-prefetch' href='http://use.fontawesome.com/' />
-    <link rel="alternate" type="application/rss+xml" title="MEGA &raquo; Feed" href="../../feed/index.html" />
-    <link rel="alternate" type="application/rss+xml" title="MEGA &raquo; Comments Feed"
+    <link rel="alternate" type="application/rss+xml" title="WASHUN &raquo; Feed" href="../../feed/index.html" />
+    <link rel="alternate" type="application/rss+xml" title="WASHUN &raquo; Comments Feed"
         href="../../comments/feed/index.html" />
     <script type="text/javascript">
         /* <![CDATA[ */
@@ -4549,7 +4549,7 @@
                                                         Brief Introduction</span></h4>
                                                 <div class="wpb_text_column wpb_content_element">
                                                     <div class="wpb_wrapper">
-                                                        <p>Mega offers the competitive large PET container production
+                                                        <p>WASHUN offers the competitive large PET container production
                                                             solutions. PET is free of BPA which means PET is the most
                                                             safety packaging plastic materials.<br />
                                                             Our MG range of machines enables the blowing of single serve
