--- a/www.megamachinery.com/solution/oval-shaped-bottles/index.html
+++ b/www.megamachinery.com/solution/oval-shaped-bottles/index.html
@@ -4549,11 +4549,12 @@
                                                         Brief Introduction</span></h4>
                                                 <div class="wpb_text_column wpb_content_element">
                                                     <div class="wpb_wrapper">
-                                                        <p>Mega’s preferential heating system specialized in variety of
+                                                        <p>Washun’s preferential heating system specialized in variety
+                                                            of
                                                             thin oval &amp; flat shape PET bottles. We provide the
                                                             turn-key package for the customer’s challenging container
                                                             designs.</p>
-                                                        <p>Mega’s special preferential heating system is special
+                                                        <p>Washun’s special preferential heating system is special
                                                             designed for the thin oval shape PET bottles which blown by
                                                             two stage stretch blow molding equipments. This technology
                                                             allows very precise wall thickness distribution, even on
