--- a/www.megamachinery.com/solution/pet-can/index.html
+++ b/www.megamachinery.com/solution/pet-can/index.html
@@ -24,8 +24,8 @@
     </style>
     <link rel='dns-prefetch' href='http://fonts.googleapis.com/' />
     <link rel='dns-prefetch' href='http://use.fontawesome.com/' />
-    <link rel="alternate" type="application/rss+xml" title="MEGA &raquo; Feed" href="../../feed/index.html" />
-    <link rel="alternate" type="application/rss+xml" title="MEGA &raquo; Comments Feed"
+    <link rel="alternate" type="application/rss+xml" title="WASHUN &raquo; Feed" href="../../feed/index.html" />
+    <link rel="alternate" type="application/rss+xml" title="WASHUN &raquo; Comments Feed"
         href="../../comments/feed/index.html" />
     <script type="text/javascript">
         /* <![CDATA[ */
@@ -4553,7 +4553,7 @@
                                                             of less production cost, transparent body, and long shelf
                                                             life. In the market, beverage producer tend to using PET can
                                                             for the colorful liquid.</p>
-                                                        <p>MEGA provide two type of PET can solution, the one is with
+                                                        <p>WASHUN provide two type of PET can solution, the one is with
                                                             the cutter, the procedure is blow molding the preformed
                                                             bottle first, then cut the top part out to forming the PET
                                                             Can shape. Another method is blow molding the PET can
