--- a/www.megamachinery.com/solution/wide-mouth-containers-jar/index.html
+++ b/www.megamachinery.com/solution/wide-mouth-containers-jar/index.html
@@ -24,8 +24,8 @@
     </style>
     <link rel='dns-prefetch' href='http://fonts.googleapis.com/' />
     <link rel='dns-prefetch' href='http://use.fontawesome.com/' />
-    <link rel="alternate" type="application/rss+xml" title="MEGA &raquo; Feed" href="../../feed/index.html" />
-    <link rel="alternate" type="application/rss+xml" title="MEGA &raquo; Comments Feed"
+    <link rel="alternate" type="application/rss+xml" title="WASHUN &raquo; Feed" href="../../feed/index.html" />
+    <link rel="alternate" type="application/rss+xml" title="WASHUN &raquo; Comments Feed"
         href="../../comments/feed/index.html" />
     <script type="text/javascript">
         /* <![CDATA[ */
@@ -4647,7 +4647,7 @@
                                                         Remark</span></h4>
                                                 <div class="wpb_text_column wpb_content_element">
                                                     <div class="wpb_wrapper">
-                                                        <p>Mega Provides the automatic wide mouth preform handling
+                                                        <p>WASHUN Provides the automatic wide mouth preform handling
                                                             system for our reheat stretch blow molding machines.</p>
                                                         <p>Ywashun machinery, the Professional blow molding equipments
                                                             supplier in China.</p>
