--- a/www.megamachinery.com/solution/multiple-layer-extrusion-blow-molded-container/index.html
+++ b/www.megamachinery.com/solution/multiple-layer-extrusion-blow-molded-container/index.html
@@ -24,8 +24,8 @@
     </style>
     <link rel='dns-prefetch' href='http://fonts.googleapis.com/' />
     <link rel='dns-prefetch' href='http://use.fontawesome.com/' />
-    <link rel="alternate" type="application/rss+xml" title="MEGA &raquo; Feed" href="../../feed/index.html" />
-    <link rel="alternate" type="application/rss+xml" title="MEGA &raquo; Comments Feed"
+    <link rel="alternate" type="application/rss+xml" title="WASHUN &raquo; Feed" href="../../feed/index.html" />
+    <link rel="alternate" type="application/rss+xml" title="WASHUN &raquo; Comments Feed"
         href="../../comments/feed/index.html" />
     <script type="text/javascript">
         /* <![CDATA[ */
@@ -4549,7 +4549,7 @@
                                                         Brief Introduction</span></h4>
                                                 <div class="wpb_text_column wpb_content_element">
                                                     <div class="wpb_wrapper">
-                                                        <p>Mega offer the solution in process two or more different
+                                                        <p>WASHUN offer the solution in process two or more different
                                                             plastics are combined. These plastics show properties when
                                                             combined which they do not have when processed on their own.
                                                             This process offers technical and economical solutions for
