Update branding from MEGA to WASHUN in multiple HTML files

--- a/www.megamachinery.com/portfolio/mg-jar700-semi-automatic-blow-moulding-machine/index.html
+++ b/www.megamachinery.com/portfolio/mg-jar700-semi-automatic-blow-moulding-machine/index.html
@@ -24,8 +24,8 @@
     </style>
     <link rel='dns-prefetch' href='http://fonts.googleapis.com/' />
     <link rel='dns-prefetch' href='http://use.fontawesome.com/' />
-    <link rel="alternate" type="application/rss+xml" title="MEGA &raquo; Feed" href="../../feed/index.html" />
-    <link rel="alternate" type="application/rss+xml" title="MEGA &raquo; Comments Feed"
+    <link rel="alternate" type="application/rss+xml" title="WASHUN &raquo; Feed" href="../../feed/index.html" />
+    <link rel="alternate" type="application/rss+xml" title="WASHUN &raquo; Comments Feed"
         href="../../comments/feed/index.html" />
     <script type="text/javascript">
         /* <![CDATA[ */
@@ -4567,7 +4567,7 @@
                                                 </h4>
                                                 <div class="wpb_text_column wpb_content_element">
                                                     <div class="wpb_wrapper">
-                                                        <p>Mega is chinese professional blow moulding machine makers for
+                                                        <p>WASHUN is chinese professional blow moulding machine makers for
                                                             Wide neck and Wide mouth PET Jar container . MG-Jar 700 is
                                                             specially designed for PET Jars, it has unique sealing
                                                             system, it suitable for different sized wide neck finishes
