--- a/www.megamachinery.com/products/equipments-for-caps/index.html
+++ b/www.megamachinery.com/products/equipments-for-caps/index.html
@@ -24,8 +24,8 @@
     </style>
     <link rel='dns-prefetch' href='http://fonts.googleapis.com/' />
     <link rel='dns-prefetch' href='http://use.fontawesome.com/' />
-    <link rel="alternate" type="application/rss+xml" title="MEGA &raquo; Feed" href="../../feed/index.html" />
-    <link rel="alternate" type="application/rss+xml" title="MEGA &raquo; Comments Feed"
+    <link rel="alternate" type="application/rss+xml" title="WASHUN &raquo; Feed" href="../../feed/index.html" />
+    <link rel="alternate" type="application/rss+xml" title="WASHUN &raquo; Comments Feed"
         href="../../comments/feed/index.html" />
     <script type="text/javascript">
         /* <![CDATA[ */
@@ -4567,7 +4567,7 @@
                                             <div class="wpb_wrapper">
                                                 <div class="wpb_text_column wpb_content_element">
                                                     <div class="wpb_wrapper">
-                                                        <p>Mega is Chinese professional cap lining machine and cap
+                                                        <p>WASHUN is Chinese professional cap lining machine and cap
                                                             slitting machine manufacturer, supplier and maker. The
                                                             lining machines is special designed for the plastic closure,
                                                             In order to prolong the shelf life of carbonated drinks,
