--- a/www.megamachinery.com/products/index.html
+++ b/www.megamachinery.com/products/index.html
@@ -23,8 +23,8 @@
     </style>
     <link rel='dns-prefetch' href='http://fonts.googleapis.com/' />
     <link rel='dns-prefetch' href='http://use.fontawesome.com/' />
-    <link rel="alternate" type="application/rss+xml" title="MEGA &raquo; Feed" href="../feed/index.html" />
-    <link rel="alternate" type="application/rss+xml" title="MEGA &raquo; Comments Feed"
+    <link rel="alternate" type="application/rss+xml" title="WASHUN &raquo; Feed" href="../feed/index.html" />
+    <link rel="alternate" type="application/rss+xml" title="WASHUN &raquo; Comments Feed"
         href="../comments/feed/index.html" />
     <script type="text/javascript">
         /* <![CDATA[ */
@@ -4741,7 +4741,7 @@
                                                         <div class="wpb_text_column wpb_content_element ">
                                                             <div class="wpb_wrapper">
                                                                 <h6 style="text-align: center;"><span
-                                                                        style="color: #000000;">Mega is Chinese
+                                                                        style="color: #000000;">WASHUN is Chinese
                                                                         professional cap lining machine and cap slitting
                                                                         machine manufacturer, supplier and maker. The
                                                                         lining machines is special designed for the
@@ -4779,7 +4779,7 @@
                                                         <div class="wpb_text_column wpb_content_element ">
                                                             <div class="wpb_wrapper">
                                                                 <h6 style="text-align: center;"><span
-                                                                        style="color: #000000;">Mega is the professional
+                                                                        style="color: #000000;">WASHUN is the professional
                                                                         Chinese PET preform mould manufacturer, supplier
                                                                         and maker. Our PET mould department.. <a
                                                                             href="pet-moulds/index.html">[More.]</a></span>
