--- a/www.megamachinery.com/products/semi-automatic-blow-moulding-machines/index.html
+++ b/www.megamachinery.com/products/semi-automatic-blow-moulding-machines/index.html
@@ -24,8 +24,8 @@
     </style>
     <link rel='dns-prefetch' href='http://fonts.googleapis.com/' />
     <link rel='dns-prefetch' href='http://use.fontawesome.com/' />
-    <link rel="alternate" type="application/rss+xml" title="MEGA &raquo; Feed" href="../../feed/index.html" />
-    <link rel="alternate" type="application/rss+xml" title="MEGA &raquo; Comments Feed"
+    <link rel="alternate" type="application/rss+xml" title="WASHUN &raquo; Feed" href="../../feed/index.html" />
+    <link rel="alternate" type="application/rss+xml" title="WASHUN &raquo; Comments Feed"
         href="../../comments/feed/index.html" />
     <script type="text/javascript">
         /* <![CDATA[ */
@@ -4733,7 +4733,7 @@
                                                         Moulding Machine</span></h5>
                                                 <div class="wpb_text_column wpb_content_element">
                                                     <div class="wpb_wrapper">
-                                                        <p>Mega is Chinese professional blow moulding machine makers for
+                                                        <p>WASHUN is Chinese professional blow moulding machine makers for
                                                             Wide neck and Wide mouth PET Jar container .  <a
                                                                 href="../../portfolio/mg-jar700-semi-automatic-blow-moulding-machine/index.html">[more]</a>
                                                         </p>
